@@ -1,5 +1,11 @@
 2015-02-25  Corinna Vinschen  <corinna@vinschen.de>
 
+	* security.cc (alloc_sd): Add temporary workaround which disallows
+	any secondary user to have more permissions than the primary group
+	in calls to chmod.  Add comment to explain why.
+
+2015-02-25  Corinna Vinschen  <corinna@vinschen.de>
+
 	* uinfo.cc (client_request_pwdgrp::client_request_pwdgrp): Add missing
 	break in switch statement.
 
